update header responsive

--- a/styles.css
+++ b/styles.css
@@ -129,6 +129,7 @@ div img{
     .container_menu--list{
         width: 40vw;
         font-size: 3vw;
+        margin-left: 3vw;
     }
 
     .container_menu--btmList{
