--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,12 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
 
-
-.container_header{
+/*Header */
+.container_header {
     max-width: 1920px;
     width: 100%;
     height: 72vh;
@@ -15,30 +16,32 @@
     align-items: center;
     justify-content: space-between;
     background-color: #129799;
-    color:white;
+    color: white;
+    font-family: 'Roboto', sans-serif;
 }
 
 
-.container_header div{
+.container_header div {
     display: flex;
     align-items: center;
 }
 
- .container_header--title{
+.container_header--title {
     font-size: 4vw;
 }
 
-div img{
+div img {
     width: 33.3vw;
 }
 
 
-.container_menu--btm{
+.container_menu--btm {
     width: 70%;
+    padding: 2vh;
 
 }
 
-.container_header ul{
+.container_header ul {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -47,93 +50,153 @@ div img{
     font-size: 15px;
 }
 
-.container_menu{
+.container_menu {
     width: 60%;
+    padding: 2vh;
 }
 
-.container_menu--list{
+.container_menu--list {
     width: 10vw;
     font-size: 2em;
 }
 
-.container_menu--btmList{
+.container_menu--btmList {
     width: 30vw;
     font-size: 2em;
 }
 
-.container_header li:hover{
+.container_header li:hover {
     cursor: pointer;
     font-weight: 600;
 }
 
-@media (min-width:1940px){
+@media (min-width:1940px) {
 
-    .container_header div{
+    .container_header div {
         display: flex;
         flex-direction: column;
         justify-content: space-around;
         align-items: center;
     }
 
-    .container_header--title{
-        font-size:3.3vw;
+    .container_header--title {
+        font-size: 3.3vw;
         font-weight: 700;
     }
 
-    .container_header li{
-        font-size:3em;
+    .container_header li {
+        font-size: 3em;
         font-weight: 600;
     }
 }
 
-@media (max-width:1050px){
-    .container_header{
-        height: 55vw;
-    }
-   
-    .container_header div{
-        width: 90%;
-        
+@media (max-width:1050px) {
+    .container_header {
+        height: 55vh;
     }
 
-    div img{
+    .container_header div {
+        width: 90%;
+
+    }
+
+    div img {
         width: 50vw;
     }
-   
-    .container_header--title{
-        font-size:3vw;
+
+    .container_header--title {
+        font-size: 3vw;
     }
 
 }
 
-@media(max-width:800px){
-    .container_header div{
+@media(max-width:800px) {
+    .container_header div {
         display: flex;
         flex-direction: column;
         justify-content: space-around;
         align-items: center;
     }
 
-    .container_header div{
+    .container_header div {
         width: 100%;
-        border-top:solid 1px;
+        border-top: solid 1px;
         border-bottom: solid 1px;
     }
 
-    div img{
+    div img {
         width: 60vw;
     }
 
-    .container_header--title{
-        font-size:5vw;
+    .container_header--title {
+        font-size: 5vw;
     }
 
-    .container_menu--list{
+    .container_menu--list {
         width: 40vw;
         font-size: 3vw;
     }
 
-    .container_menu--btmList{
+    .container_menu--btmList {
         font-size: 4vw;
     }
+}
+
+/* Main */
+
+.container_main{
+    max-width: 1920px;
+    width: 100%;
+    margin: auto;
+    background-color: #FFA185;
+    height:130vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.container_main div{
+    display: flex;
+    height: 20%;
+    width: 75%;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: flex-start;
+}
+
+.container_main h2 {
+    color: #F7F7F7;
+    font-size: 3.3vw;
+    font-weight: 700;
+}
+
+.container_main p {
+    font-size: 2.1vw;
+    font-weight: 300;
+}
+
+.container_main_box {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-content: space-around;
+    height: 65%;
+}
+
+.container_main--image{
+    width: 34vw;
+    height: 38vh;
+    cursor: pointer;
+}
+
+
+.container_footer {
+    max-width: 1920px;
+    width: 100%;
+    margin: auto;
+    height: 160px;
+    background-color: #129799;
+    display: flex;
+    justify-content: space-between;
 }
